Atmosphere/Aperture screens combined before PSF calc. Correct looking PSF now. Scaling not correct yet

--- a/dev/16-3-4 Atmospheric Distortion.ipynb
+++ b/dev/16-3-4 Atmospheric Distortion.ipynb
@@ -140,7 +140,8 @@
     "# Radius from center meshgrid\n",
     "rr = (np.sqrt(np.power(xx,2)+np.power(yy,2)))\n",
     "# Calculate Kolmogorov spectral density\n",
-    "alpha = 1/5000\n",
+    "#alpha = 1/5000\n",
+    "alpha = 1/100\n",
     "phase_PSD = np.power(rr,-11/3)\n",
     "phase_PSD = np.multiply(alpha*0.023/(r0**(5/3)),phase_PSD)\n",
     "# Set DC component to 0 (previous calc attempts to set to 1/0)\n",
@@ -149,32 +150,20 @@
     "phase_screen_f = np.multiply(np.sqrt(phase_PSD),np.exp(1j*phase_phase))\n",
     "# Calculate phase screen\n",
     "phase_screen = np.real(ifft2(fftshift(phase_screen_f)*nxy*nxy))\n",
-    "\n",
-    "# Create complex phase screen\n",
+    "# Create complex atmospheric screen\n",
     "atmosphere_screen = np.exp(np.multiply(1j,phase_screen))\n",
     "\n",
-    "## Calculate Atmospheric Diffraction pattern\n",
-    "# Calculate normalized complex diffraction pattern\n",
-    "atmosphere_psf = fftshift(fft2(atmosphere_screen))\n",
-    "# Calculate PSF of complex diffraction pattern\n",
-    "atmosphere_psf = np.power(np.abs(atmosphere_psf),2)\n",
-    "\n",
-    "## Calculate Aperture Diffraction pattern\n",
-    "# Calculate normalized complex diffraction pattern\n",
-    "aperture_psf = fftshift(fft2(aperture_screen_s))\n",
-    "# Calculate PSF of complex diffraction pattern\n",
-    "aperture_psf = np.power(np.abs(aperture_psf),2)\n",
+    "# Generate total screen, combining atmosphere and aperture\n",
+    "pupil_screen = np.multiply(atmosphere_screen,aperture_screen_s)\n",
     "\n",
     "## Calculate system's total response \n",
     "# Calculate total PSF of system\n",
-    "psf = fftconvolve(atmosphere_psf,aperture_psf)\n",
-    "# Save center 512x512 image\n",
-    "psf = psf[center:center+nxy,center:center+nxy] \n",
-    "# Gamma correcting PSF\n",
-    "gamma = 1\n",
-    "psf = np.power(np.divide(psf,psf.max()),gamma)\n",
-    "\n",
-    "# Convolve atmosphere PSF with input image using FFT\n",
+    "psf = fftshift(fft2(pupil_screen))\n",
+    "psf = np.power(np.abs(psf),2)\n",
+    "# Normalize PSF\n",
+    "psf_power = np.sum(np.power(psf,2))\n",
+    "psf = np.divide(psf,psf_power)\n",
+    "# Convolve PSF with input image using FFT\n",
     "sensor_img = fftconvolve(input_img,psf)\n",
     "# Save the center 512x512 image\n",
     "sensor_img = sensor_img[center:center+nxy,center:center+nxy] \n",
@@ -182,35 +171,14 @@
     "##Plots\n",
     "colormap = \"jet\"\n",
     "\n",
-    "plt.figure(figsize = (8,8), dpi = 200)\n",
-    "plt.imshow(phase_screen, cmap=\"gray\")\n",
+    "plt.figure(figsize = (18,8), dpi = 200)\n",
+    "plt.subplot(1,2,1)\n",
+    "plt.imshow(phase_screen, cmap=colormap)\n",
+    "plt.colorbar()\n",
     "plt.title(\"Atmosphere Phase Shift (unwrapped)\")\n",
-    "plt.colorbar()\n",
-    "\n",
-    "plt.figure(figsize = (14,6), dpi = 200)\n",
-    "plt.subplot(1,2,1)\n",
-    "plt.imshow(np.angle(atmosphere_screen), cmap=colormap)\n",
-    "plt.colorbar()\n",
-    "plt.title(\"Atmosphere Phase Shift (wrapped)\")\n",
     "plt.subplot(1,2,2)\n",
-    "plt.imshow(np.log10(atmosphere_psf), cmap=colormap)\n",
-    "plt.xlabel(\"[pixels]\")\n",
-    "plt.ylabel(\"[pixels]\")\n",
-    "plt.title(\"Atmosphere PSF\")\n",
-    "\n",
-    "plt.figure(figsize = (14,6), dpi = 200)\n",
-    "plt.subplot(1,2,1)\n",
-    "plt.imshow(aperture_screen_s, cmap=colormap, \n",
-    "           extent = (-X_aperture_s_meff/2,X_aperture_s_meff/2,\n",
-    "                     -X_aperture_s_meff/2,X_aperture_s_meff/2))\n",
-    "plt.title(\"Aperture Magnitude\")\n",
-    "plt.xlabel(\"[m]\")\n",
-    "plt.ylabel(\"[m]\")\n",
-    "plt.subplot(1,2,2)\n",
-    "plt.imshow(aperture_psf, cmap=colormap)\n",
-    "plt.xlabel(\"[pixels]\")\n",
-    "plt.ylabel(\"[pixels]\")\n",
-    "plt.title(\"Aperture PSF\")\n",
+    "plt.imshow(aperture_screen_s, cmap=colormap)\n",
+    "plt.title(\"Telescope Aperture\")\n",
     "\n",
     "plt.figure(figsize = (8,8), dpi = 200)\n",
     "plt.imshow(psf, cmap=colormap)\n",
@@ -245,7 +213,7 @@
     "#  Calculate total RMS variance of masked image\n",
     "\n",
     "# Calculate r0 in pixels\n",
-    "r0_p = int(np.round((r0/d_aperture)*nxy))\n",
+    "r0_p = 15#int(np.round((r0/d_aperture)*nxy))\n",
     "r0_p_center = (r0_p-1)/2\n",
     "\n",
     "# Calculate indices to loop over\n",
