Fried Cell RMS Calculation Function corrected

--- a/dev/16-3-4 Atmospheric Distortion.ipynb
+++ b/dev/16-3-4 Atmospheric Distortion.ipynb
@@ -213,7 +213,7 @@
     "#  Calculate total RMS variance of masked image\n",
     "\n",
     "# Calculate r0 in pixels\n",
-    "r0_p = 15#int(np.round((r0/d_aperture)*nxy))\n",
+    "r0_p = int(np.round((r0/d_aperture)*nxy))\n",
     "r0_p_center = (r0_p-1)/2\n",
     "\n",
     "# Calculate indices to loop over\n",
