Changed figure sizes

--- a/dev/16-3-31 labeyrie_deconvolution_images.ipynb
+++ b/dev/16-3-31 labeyrie_deconvolution_images.ipynb
@@ -228,7 +228,7 @@
     "plt.imshow(psf_avg, cmap=colormap)\n",
     "plt.title(\"Long Exposure PSF\")\n",
     "\n",
-    "plt.figure(figsize = (14,14), dpi = 100)\n",
+    "plt.figure(figsize = (16,16), dpi = 50)\n",
     "plt.subplot(3,3,1)\n",
     "plt.imshow(input_img_emph, cmap=colormap)\n",
     "plt.title(\"Binary Star Object\")\n",
@@ -243,7 +243,7 @@
     "plt.title(\"Binary Star Object PSD\")\n",
     "plt.subplot(3,3,5)\n",
     "plt.imshow(np.log10(atmosphere_psd_avg), cmap=colormap)\n",
-    "plt.title(\"Avg Atmospheric/Aperture PSF PSD\")\n",
+    "plt.title(\"Avg PSF PSD\")\n",
     "plt.subplot(3,3,6)\n",
     "plt.imshow(np.log10(sensor_img_psd_avg), cmap=colormap)\n",
     "plt.title(\"Avg Binary Star Image PSD\")\n",
@@ -252,11 +252,10 @@
     "plt.title(\"Binary Star Object Autocorrelation\")\n",
     "plt.subplot(3,3,8)\n",
     "plt.imshow(atmosphere_acorr_avg, cmap=colormap)\n",
-    "plt.title(\"Avg Atmospheric/Aperture PSF Autocorrelation\")\n",
+    "plt.title(\"Avg PSF Autocorrelation\")\n",
     "plt.subplot(3,3,9)\n",
     "plt.imshow(sensor_img_acorr_avg, cmap=colormap)\n",
-    "plt.title(\"Avg Binary Star Image Autocorrelation\")\n",
-    "\n"
+    "plt.title(\"Avg Binary Star Image Autocorrelation\")"
    ]
   },
   {
