Added more tests, still no success

--- a/dev/16-4-14 Cython Test.ipynb
+++ b/dev/16-4-14 Cython Test.ipynb
@@ -31,32 +31,11 @@
     "from labeyrieClasses import target\n",
     "\n",
     "%matplotlib inline\n",
-    "%load_ext cython"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
+    "%load_ext cython\n",
+    "\n",
     "# Comparison of bare Python to Cython for preprocessing FITS data\n",
-    "binary = target()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# Import demo .FITS file\n",
-    "binary.fits.fileName = \"/home/niels/Documents/FITS/KP330.fits\"\n",
-    "binary.fits.read(numDimensions=3)"
+    "binary = target()\n",
+    "binary.fits.fileName = \"/home/niels/Documents/FITS/KP330.fits\""
    ]
   },
   {
@@ -300,17 +279,18 @@
    },
    "outputs": [],
    "source": [
+    "#%%timeit -n 1 -r 1\n",
     "binary.fits.read(numDimensions=3)\n",
     "# Run the test Cython function\n",
     "\n",
-    "psd = takePSD(binary.fits.data[0])\n",
+    "%timeit -n 100 -r 1 psd = takePSD(binary.fits.data[0])\n",
     "\n",
-    "plt.figure()\n",
-    "plt.imshow(binary.fits.data[0])\n",
+    "#plt.figure()\n",
+    "#plt.imshow(binary.fits.data[0])\n",
     "\n",
-    "plt.figure()\n",
-    "plt.imshow(np.log10(psd+1E-3))\n",
-    "plt.colorbar()\n"
+    "#plt.figure()\n",
+    "#plt.imshow(np.log10(psd+1E-3))\n",
+    "#plt.colorbar()\n"
    ]
   },
   {
@@ -334,9 +314,11 @@
     "    # Accumulated PSD values\n",
     "    cdef np.ndarray img = np.zeros((512,512), dtype=np.float32)\n",
     "    \n",
+    "    fitsData_32 = fits.astype(np.float32)\n",
+    "    \n",
     "    # Loop through images in cube\n",
     "    # Looping through all images in cube\n",
-    "    for img in fits:\n",
+    "    for img in fitsData_32:\n",
     "\n",
     "        # Calculate 2D power spectrum\n",
     "        # This gives us only real values\n",
@@ -368,14 +350,307 @@
     "%%timeit -n 1 -r 1\n",
     "binary.fits.read(numDimensions=3)\n",
     "# Run the test Cython function\n",
-    "\n",
-    "fitsData_32 = binary.fits.data.astype(np.float32)\n",
-    "\n",
-    "psdAvg = preprocess(fitsData_32)\n",
+    "psdAvg = preprocess(binary.fits.data)\n",
     "\n",
     "plt.figure()\n",
     "plt.imshow(np.log10(psdAvg+1E-3))\n",
     "plt.colorbar()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "%%timeit -n 1 -r 1\n",
+    "binary.fits.read(numDimensions=3)\n",
+    "# Calculate PSD with Cython function\n",
+    "psdAvg = np.zeros((512,512),dtype=(np.float32))\n",
+    "psdSum = np.zeros((512,512),dtype=(np.float32))\n",
+    "\n",
+    "# Looping through all images in cube\n",
+    "for index,img in enumerate(binary.fits.data):\n",
+    "\n",
+    "    # Calculate 2D power spectrum\n",
+    "    # This gives us only real values\n",
+    "    psdImg = takePSD(img)\n",
+    "\n",
+    "    # Accumulate current PSD value\n",
+    "    psdSum = np.add(psdSum,psdImg)\n",
+    "\n",
+    "# Divide by # of images to calculate average\n",
+    "psdAvg = np.divide(psdSum,1000)\n",
+    "\n",
+    "# Normalizing FFT\n",
+    "psdAvg = np.divide(psdAvg, (psdAvg.size)**2)\n",
+    "\n",
+    "# Shifting FFT\n",
+    "psdAvg = np.fft.fftshift(psdAvg)\n",
+    "\n",
+    "plt.imshow(np.log10(psdAvg+1E-3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# We see that it is actually faster to not use numpy\n",
+    "fits = binary.fits.data[0].astype(np.float32)\n",
+    "%timeit psd = np.abs(fft2(fits))**2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "%%cython --annotate\n",
+    "# Trying to not use numpy for the power of two factor\n",
+    "cimport numpy as np\n",
+    "import numpy as np\n",
+    "\n",
+    "def takePSD(np.ndarray image):\n",
+    "\n",
+    "    cdef np.ndarray psd = np.zeros([512,512], dtype=np.float32)\n",
+    "\n",
+    "    # Calculate 2D power spectrum\n",
+    "    # This gives us only real values\n",
+    "    psd = np.abs(np.fft.fft2(image))**2\n",
+    "    return psd\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#%%timeit -n 1 -r 1\n",
+    "binary.fits.read(numDimensions=3)\n",
+    "# Run the test Cython function\n",
+    "# This is still slower than non-cython\n",
+    "\n",
+    "fits = binary.fits.data[0].astype(np.float32)\n",
+    "\n",
+    "%timeit -n 100 -r 1 psd = takePSD(binary.fits.data[0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# We see that the PSD calculated is actually a float64, not a float32\n",
+    "fits = binary.fits.data[0].astype(np.float32)\n",
+    "\n",
+    "fits_F = np.fft.fft2(fits)\n",
+    "fits_Fabs = np.abs(fits_F)\n",
+    "fits_PSD = fits_Fabs**2\n",
+    "\n",
+    "print(fits_F.dtype)\n",
+    "print(fits_Fabs.dtype)\n",
+    "print(fits_PSD.dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "%%cython --annotate\n",
+    "# Creating intermediate variables with each correct type\n",
+    "cimport numpy as np\n",
+    "import numpy as np\n",
+    "\n",
+    "def takePSD(np.ndarray image):\n",
+    "    cdef np.ndarray image_F = np.zeros([512,512], dtype=np.complex128)\n",
+    "    cdef np.ndarray image_Fabs = np.zeros([512,512], dtype=np.float64)\n",
+    "    cdef np.ndarray psd = np.zeros([512,512], dtype=np.float64)\n",
+    "\n",
+    "    image_F = np.fft.fft2(image)\n",
+    "    image_Fabs = np.abs(image_F)\n",
+    "    psd = image_Fabs**2\n",
+    "    \n",
+    "    return psd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#%%timeit -n 1 -r 1\n",
+    "binary.fits.read(numDimensions=3)\n",
+    "# Run the test Cython function\n",
+    "# This is still slower than non-cython\n",
+    "\n",
+    "fits = binary.fits.data[0].astype(np.float32)\n",
+    "\n",
+    "%timeit -n 100 -r 1 psd = takePSD(fits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "%%cython --annotate\n",
+    "# Using the _t suffix on datatypes\n",
+    "cimport numpy as np\n",
+    "import numpy as np\n",
+    "\n",
+    "def takePSD(np.ndarray[np.float32_t, ndim=2] image):\n",
+    "    cdef np.ndarray[np.complex128_t, ndim=2] image_F = np.zeros([512,512], dtype=np.complex128)\n",
+    "    cdef np.ndarray[np.float64_t, ndim=2] image_Fabs = np.zeros([512,512], dtype=np.float64)\n",
+    "    cdef np.ndarray[np.float64_t, ndim=2] psd = np.zeros([512,512], dtype=np.float64)\n",
+    "\n",
+    "    image_F = np.fft.fft2(image)\n",
+    "    image_Fabs = np.abs(image_F)\n",
+    "    psd = image_Fabs**2\n",
+    "    \n",
+    "    return psd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#%%timeit -n 1 -r 1\n",
+    "binary.fits.read(numDimensions=3)\n",
+    "# Run the test Cython function\n",
+    "# This is still slower than non-cython\n",
+    "\n",
+    "fits = binary.fits.data[0].astype(np.float32)\n",
+    "\n",
+    "%timeit -n 100 -r 1 psd = takePSD(fits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "%%cython --annotate\n",
+    "# Trying cpdef\n",
+    "cimport numpy as np\n",
+    "import numpy as np\n",
+    "\n",
+    "cpdef takePSD(np.ndarray[np.float32_t, ndim=2] image):\n",
+    "    cdef np.ndarray[np.complex128_t, ndim=2] image_F = np.zeros([512,512], dtype=np.complex128)\n",
+    "    cdef np.ndarray[np.float64_t, ndim=2] image_Fabs = np.zeros([512,512], dtype=np.float64)\n",
+    "    cdef np.ndarray[np.float64_t, ndim=2] psd = np.zeros([512,512], dtype=np.float64)\n",
+    "\n",
+    "    image_F = np.fft.fft2(image)\n",
+    "    image_Fabs = np.abs(image_F)\n",
+    "    psd = image_Fabs**2\n",
+    "    \n",
+    "    return psd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#%%timeit -n 1 -r 1\n",
+    "binary.fits.read(numDimensions=3)\n",
+    "# Run the test cpdef\n",
+    "# This is still slower  nthanon-cython\n",
+    "\n",
+    "fits = binary.fits.data[0].astype(np.float32)\n",
+    "\n",
+    "%timeit -n 100 -r 1 psd = takePSD(fits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from scipy.fftpack import fft2\n",
+    "import numpy as np\n",
+    "\n",
+    "#\n",
+    "\n",
+    "def psdAvgCalc(fits):\n",
+    "    psdSum = np.zeros((512,512),dtype=np.float64)\n",
+    "    psdImg = np.zeros((512,512),dtype=np.float64)\n",
+    "    psdAvg = np.zeros((512,512),dtype=np.float64)           \n",
+    "               \n",
+    "    # Looping through all images in cube\n",
+    "    for img in fits:\n",
+    "\n",
+    "        # FFT function requires little-endian data, so casting it\n",
+    "        img = img.astype(np.float32)\n",
+    "\n",
+    "        # Calculate 2D power spectrum\n",
+    "        # This gives us only real values\n",
+    "        psdImg = np.abs(fft2(img))**2\n",
+    "\n",
+    "        # Accumulate current PSD value\n",
+    "        psdSum = np.add(psdSum,psdImg)\n",
+    "\n",
+    "    # Divide by # of images to calculate average\n",
+    "    psdAvg = np.divide(psdSum,1000)\n",
+    "\n",
+    "    # Normalizing FFT\n",
+    "    psdAvg = np.divide(psdAvg, (psdAvg.size)**2)\n",
+    "    \n",
+    "    return psdAvg\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "%%timeit -n 1 -r 1\n",
+    "binary.fits.read(numDimensions=3)\n",
+    "# Experimenting with original preprocess \n",
+    "#  code again\n",
+    "psdAvg = psdAvgCalc(binary.fits.data) "
    ]
   }
  ],
