Timing the entire PSD calculation function shows speed around 8.8ms

--- a/dev/16-4-22 psd_fftw test.ipynb
+++ b/dev/16-4-22 psd_fftw test.ipynb
@@ -72,12 +72,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100 loops, best of 3: 8.87 ms per loop\n"
+     ]
+    }
+   ],
    "source": [
+    "%%timeit\n",
     "# Reshape Square array to be flat\n",
     "input_img_flat = np.reshape(input_img.astype(np.float32),(imgsize**2,1))\n",
     "\n",
@@ -93,16 +102,38 @@
     "out_ptr = fftw_psd_dll.psd(img_ptr)\n",
     "\n",
     "# Reshape array to image\n",
-    "%timeit psd_image = np.reshape(out_ptr.contents,(imgsize,int(imgsize/2+1)))"
+    "psd_image = np.reshape(out_ptr.contents,(imgsize,int(imgsize/2+1)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'input_img_flat' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-5-10a82d8ca321>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfigure\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msubplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mimshow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput_img_flat\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimgsize\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mimgsize\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msubplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mimshow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlog10\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpsd_image\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'input_img_flat' is not defined"
+     ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAMIAAAEACAYAAADhtqk6AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAC3VJREFUeJzt3UGInOd9x/HvT1YdaLAFrkE0cuSCHaM6xDEmUffgw8Qu\n1coXBV8iCVxiCNUhMrmEyD4U7aHg5BZSNTEKqksOQYW4BzVNapngIbi1bIXKktNqLSkJirQyDnYT\nQwIuG/HPYabKMNndmd1931lZ+/3AwLwzj97nGWm+vO+7K3hTVUjr3Ya1XoB0PTAECUOQAEOQAEOQ\nAEOQgDFCSHIkyVtJziwx5mtJzid5Lcn9zS5Rat84R4RngR2LvZlkJ3BXVX0E2Ac809DapIkZGUJV\nvQT8cokhu4Bv9ce+AmxKsrmZ5UmT0cQ1whbg0sD2XP816X3Di2UJ2NjAPuaADw9s39F/7Q8k8T82\nqVVVlZX8uXGPCOk/FnIM+GuAJFPAr6rqrcV2VFVr8jh48OC6mnc9fubVGHlESPJtoAP8SZKfAweB\nm3vf6TpcVd9L8kiSC8BvgMdXtSJpDYwMoar2jjFmfzPLkdbGurlY7nQ662retZx7LT/zSmW151bL\nmiypSc6n9SUJ1fLFsnRDMwQJQ5AAQ5AAQ5AAQ5AAQ5AAQ5AAQ5AAQ5AAQ5AAQ5AAQ5AAQ5AAQ5AA\nQ5AAQ5AAQ5AAQ5AAQ5AAQ5AAQ5AAQ5AAQ5AAQ5AAQ5AAQ5AAQ5AAQ5AAQ5AAQ5AAQ5AAQ5AAQ5CA\nMUNIMp1kNsm5JAcWeP/WJMeSvJbk9SSfbXylUotG3kMtyQbgHPAwcAU4CeyuqtmBMU8Bt1bVU0lu\nB94ANlfVb4f25T3U1Jq276G2HThfVRerah44CuwaGlPALf3ntwDvDEcgXc/GCWELcGlg+3L/tUGH\ngHuTXAFOA19oZnnSZIy84fiYdgCnquqhJHcBLyS5r6p+PTxwZmbm2vNOp/O+vCevrg/dbpdut9vI\nvsa5RpgCZqpqur/9JFBV9ZWBMd8Fnq6q/+hv/wA4UFU/GtqX1whqTdvXCCeBu5PcmeRmYDdwbGjM\nReAv+4vZDNwD/HQlC5LWwshTo6q6mmQ/cJxeOEeq6mySfb236zDwd8A/JTnT/2Nfqqr/bW3VUsNG\nnho1OpmnRmpR26dG0g3PECQMQQIMQQIMQQIMQQIMQQIMQQIMQQIMQQIMQQIMQQIMQQIMQQIMQQIM\nQQIMQQIMQQIMQQIMQQIMQQIMQQIMQQIMQQIMQQIMQQIMQQIMQQIMQQIMQQIMQQIMQQIMQQIMQQIM\nQQLGDCHJdJLZJOeSHFhkTCfJqSQ/TvJis8uU2jXOfZY3AOeAh4Er9G43u7uqZgfGbAL+E/irqppL\ncntVvb3AvryZoFrT9s0EtwPnq+piVc0DR4FdQ2P2As9V1RzAQhFI17NxQtgCXBrYvtx/bdA9wG1J\nXkxyMsljTS1QmoSRNxxfxn4eAB4CPgi8nOTlqrrQ0P6lVo0TwhywdWD7jv5rgy4Db1fVe8B7SX4I\nfBz4gxBmZmauPe90OnQ6neWtWOrrdrt0u91G9jXOxfJNwBv0LpbfBF4F9lTV2YEx24C/B6aBDwCv\nAJ+pqv8Z2pcXy2rNai6WRx4Rqupqkv3AcXrXFEeq6mySfb2363BVzSZ5HjgDXAUOD0cgXc9GHhEa\nncwjglrU9o9PpRueIUgYggQYggQYggQYggQYggQYggQYggQYggQYggQYggQYggQYggQYggQYggQY\nggQYggQYggQYggQYggQYggQYggQYggQYggQYggQYggQYggQYggQYggQYggQYggQYggQYggQYggQY\nggSMGUKS6SSzSc4lObDEuE8mmU/yaHNLlNo3MoQkG4BDwA7go8Ce/n2VFxr3ZeD5phcptW2cI8J2\n4HxVXayqeeAosGuBcU8A3wF+0eD6pIkYJ4QtwKWB7cv9165J8iHg01X1DWBF97mV1lJTF8tfBQav\nHYxB7ysbxxgzB2wd2L6j/9qgTwBHkwS4HdiZZL6qjg3vbGZm5trzTqdDp9NZ5pKlnm63S7fbbWRf\nqaqlByQ3AW8ADwNvAq8Ce6rq7CLjnwX+tar+ZYH3atR80koloapWdDYy8ohQVVeT7AeO0zuVOlJV\nZ5Ps671dh4f/yEoWIq2lkUeERifziKAWreaI4G+WJQxBAgxBAgxBAgxBAgxBAgxBAgxBAgxBAgxB\nAgxBAgxBAgxBAgxBAgxBAgxBAgxBAgxBAgxBAgxBAgxBAgxBAgxBAgxBAgxBAgxBAgxBAgxBAgxB\nAgxBAgxBAgxBAgxBAgxBAgxBAgxBAsYMIcl0ktkk55IcWOD9vUlO9x8vJflY80uV2jPOfZY3AOfo\n3Wf5CnAS2F1VswNjpoCzVfVukmlgpqqmFtiXd9VUa9q+q+Z24HxVXayqeeAosGtwQFWdqKp3+5sn\ngC0rWYy0VsYJYQtwaWD7Mkt/0T8HfH81i5ImbWOTO0vyKeBx4MHFxszMzFx73ul06HQ6TS5B60i3\n26Xb7Tayr3GuEabonfNP97efBKqqvjI07j7gOWC6qn6yyL68RlBr2r5GOAncneTOJDcDu4FjQwvY\nSi+CxxaLQLqejTw1qqqrSfYDx+mFc6SqzibZ13u7DgN/C9wGfD1JgPmq2t7mwqUmjTw1anQyT43U\norZPjaQbniFIGIIEGIIEGIIEGIIEGIIEGIIEGIIEGIIEGIIEGIIEGIIEGIIEGIIEGIIEGIIEGIIE\nGIIEGIIEGIIEGIIEGIIEGIIEGIIEGIIEGIIEGIIEGIIEGIIEGIIEGIIEGIIEGIIEGIIEjBlCkukk\ns0nOJTmwyJivJTmf5LUk9ze7TKldI0NIsgE4BOwAPgrsSbJtaMxO4K6q+giwD3imhbWuSlM3pn6/\nzLuWc6/lZ16pcY4I24HzVXWxquaBo8CuoTG7gG8BVNUrwKYkmxtd6Sqtxy/FevzMKzVOCFuASwPb\nl/uvLTVmboEx0nXLi2UJoKqWfABTwL8PbD8JHBga8wzwmYHtWWDzAvsqHz7afIz6Pi/22MhoJ4G7\nk9wJvAnsBvYMjTkGfB745yRTwK+q6q3hHa30ruhS20aGUFVXk+wHjtM7lTpSVWeT7Ou9XYer6ntJ\nHklyAfgN8Hi7y5aalf4pi7SutXKxvFa/gBs1b5K9SU73Hy8l+VgT844z98C4TyaZT/LopOZN0kly\nKsmPk7zYxLzjzJ3k1iTH+v/Gryf5bEPzHknyVpIzS4xZ3vdrpRcXS1xcbwAuAHcCfwS8BmwbGrMT\n+Lf+878ATkxo3ilgU//5dBPzjjv3wLgfAN8FHp3QZ94E/Dewpb99+wT/nZ8Cnv7/eYF3gI0NzP0g\ncD9wZpH3l/39auOIsFa/gBs5b1WdqKp3+5snaO53HeN8ZoAngO8Av5jgvHuB56pqDqCq3p7g3AXc\n0n9+C/BOVf12tRNX1UvAL5cYsuzvVxshrNUv4MaZd9DngO+vcs6x507yIeDTVfUNoKmfno3zme8B\nbkvyYpKTSR6b4NyHgHuTXAFOA19oaO7lrm3k92ucH5/ecJJ8it5Pth6c4LRfBQbPoyf1o+SNwAPA\nQ8AHgZeTvFxVFyYw9w7gVFU9lOQu4IUk91XVrycw97K0EcIcsHVg+47+a8NjPjxiTBvzkuQ+4DAw\nXVVLHV6bnvsTwNEkoXe+vDPJfFUda3ney8DbVfUe8F6SHwIfp3d+vxrjzP048DRAVf0kyc+AbcCP\nVjn3OGtb3veriQunoQuVm/j9RdTN9C6i/nxozCP8/mJmimYulseZdytwHpia9GceGv8szVwsj/OZ\ntwEv9Mf+MfA6cO+E5v4H4GD/+WZ6pyu3NfR3/mfA64u8t+zvV+Mh9CefBt7of+me7L+2D/ibgTGH\n+n+Rp4EHJjEv8E16P7n4L+AU8OokP/PA2H9sIoRl/F1/kd5Pjs4AT0zqMwN/Cjzfn/cMsKeheb8N\nXAH+D/g5vSPPqr5f/kJNwv99KgGGIAGGIAGGIAGGIAGGIAGGIAGGIAHwO2QnE2g++rejAAAAAElF\nTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7f5ef2f6b5c0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "plt.figure()\n",
     "plt.subplot(1,2,1)\n",
