PSD function put together, takes on average 8.6ms

--- a/dev/16-4-22 psd_fftw test.ipynb
+++ b/dev/16-4-22 psd_fftw test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -11,18 +11,28 @@
     "from labeyrieClasses import target #, fftw_psd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import ctypes\n",
-    "%matplotlib inline"
+    "import ctypes\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filename: /home/niels/Documents/FITS/KP330.fits\n",
+      "No.    Name         Type      Cards   Dimensions   Format\n",
+      "0    PRIMARY     PrimaryHDU      62   (512, 512, 1000)   float32   \n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "binary = target()\n",
     "binary.fits.fileName = \"/home/niels/Documents/FITS/KP330.fits\"\n",
@@ -31,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -61,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -87,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -106,13 +116,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "psd_image.max()"
+    "def fftw_psd(image):\n",
+    "    # Reshape Square array to be flat\n",
+    "    input_img_flat = np.reshape(input_img.astype(np.float32),(imgsize**2,1))\n",
+    "\n",
+    "    # Create pointers for in/out\n",
+    "    img_ptr = (input_img_flat).ctypes.data_as(ctypes.POINTER(ctypes.c_float))\n",
+    "    out_ptr = (np.zeros(img_n,np.float32)).ctypes.data_as(ctypes.POINTER(ctypes.c_float))\n",
+    "    # Array type to be passed to wrapped C function\n",
+    "    # Set input argument to be flat array of doubles (# of input img pixels)\n",
+    "    fftw_psd_dll.psd.argtypes = [ctypes.POINTER(ctypes.c_float)]\n",
+    "    fftw_psd_dll.psd.restype = ctypes.POINTER(ctypes.c_float * psd_n)\n",
+    "\n",
+    "    # Calculate PSD, get a pointer returned\n",
+    "    out_ptr = fftw_psd_dll.psd(img_ptr)\n",
+    "\n",
+    "    # Reshape array to image\n",
+    "    psd_image = np.reshape(out_ptr.contents,(imgsize,int(imgsize/2+1)))\n",
+    "    \n",
+    "    # Return PSD Image\n",
+    "    return psd_image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100 loops, best of 3: 8.58 ms per loop\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Averaging ~8.6ms for each PSD calculation\n",
+    "\n",
+    "psd_sum = np.zeros((imgsize,int(imgsize/2)+1))\n",
+    "image = binary.fits.data[0]\n",
+    "%timeit psd_sum = fftw_psd(image)\n"
    ]
   }
  ],
