Fixed variable name in fftw_psd

--- a/dev/16-4-22 psd_fftw test.ipynb
+++ b/dev/16-4-22 psd_fftw test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -16,23 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Filename: /home/niels/Documents/FITS/KP330.fits\n",
-      "No.    Name         Type      Cards   Dimensions   Format\n",
-      "0    PRIMARY     PrimaryHDU      62   (512, 512, 1000)   float32   \n",
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "binary = target()\n",
     "binary.fits.fileName = \"/home/niels/Documents/FITS/KP330.fits\"\n",
@@ -41,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -60,7 +49,17 @@
     "imgsize = 512\n",
     "psd_n = imgsize*(int(imgsize/2)+1)\n",
     "img_n = imgsize**2\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "# Get input file\n",
     "input_img = binary.fits.data[0]\n",
     "#array = np.zeros((imgsize,imgsize))\n",
@@ -71,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -97,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -116,13 +115,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def fftw_psd(image):\n",
+    "def fftw_psd(input_img):\n",
     "    # Reshape Square array to be flat\n",
     "    input_img_flat = np.reshape(input_img.astype(np.float32),(imgsize**2,1))\n",
     "\n",
@@ -138,7 +137,12 @@
     "    out_ptr = fftw_psd_dll.psd(img_ptr)\n",
     "\n",
     "    # Reshape array to image\n",
-    "    psd_image = np.reshape(out_ptr.contents,(imgsize,int(imgsize/2+1)))\n",
+    "    psd_image = np.reshape(out_ptr.contents,(imgsize,int(imgsize/2+1)))# Get input file\n",
+    "input_img = binary.fits.data[0]\n",
+    "#array = np.zeros((imgsize,imgsize))\n",
+    "#array[int(imgsize/2)+1,int(imgsize/2)] = 1\n",
+    "#array[int(imgsize/2)-1,int(imgsize/2)] = 1\n",
+    "#array[int(imgsize/2),int(imgsize/2)] = 1\n",
     "    \n",
     "    # Return PSD Image\n",
     "    return psd_image"
@@ -146,19 +150,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100 loops, best of 3: 8.58 ms per loop\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Averaging ~8.6ms for each PSD calculation\n",
     "\n",
