Implemented standard DFT function. Twice as slow as the R2C

--- a/dev/16-4-22 psd_fftw test.ipynb
+++ b/dev/16-4-22 psd_fftw test.ipynb
@@ -138,11 +138,11 @@
     "\n",
     "    # Reshape array to image\n",
     "    psd_image = np.reshape(out_ptr.contents,(imgsize,int(imgsize/2+1)))# Get input file\n",
-    "input_img = binary.fits.data[0]\n",
-    "#array = np.zeros((imgsize,imgsize))\n",
-    "#array[int(imgsize/2)+1,int(imgsize/2)] = 1\n",
-    "#array[int(imgsize/2)-1,int(imgsize/2)] = 1\n",
-    "#array[int(imgsize/2),int(imgsize/2)] = 1\n",
+    "    input_img = binary.fits.data[0]\n",
+    "    #array = np.zeros((imgsize,imgsize))\n",
+    "    #array[int(imgsize/2)+1,int(imgsize/2)] = 1\n",
+    "    #array[int(imgsize/2)-1,int(imgsize/2)] = 1\n",
+    "    #array[int(imgsize/2),int(imgsize/2)] = 1\n",
     "    \n",
     "    # Return PSD Image\n",
     "    return psd_image"
@@ -161,6 +161,59 @@
     "psd_sum = np.zeros((imgsize,int(imgsize/2)+1))\n",
     "image = binary.fits.data[0]\n",
     "%timeit psd_sum = fftw_psd(image)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Writing new function making use of the complex FFT of image\n",
+    "def fftw_psd2(input_img):\n",
+    "    # Reshape Square array to be flat\n",
+    "    input_img_flat = np.reshape(input_img.astype(np.float32),(imgsize**2,1))\n",
+    "\n",
+    "    # Create pointers for in/out\n",
+    "    img_ptr = (input_img_flat).ctypes.data_as(ctypes.POINTER(ctypes.c_float))\n",
+    "    out_ptr = (np.zeros(img_n,np.float32)).ctypes.data_as(ctypes.POINTER(ctypes.c_float))\n",
+    "    # Array type to be passed to wrapped C function\n",
+    "    # Set input argument to be flat array of doubles (# of input img pixels)\n",
+    "    fftw_psd_dll.psd2.argtypes = [ctypes.POINTER(ctypes.c_float)]\n",
+    "    fftw_psd_dll.psd2.restype = ctypes.POINTER(ctypes.c_float * psd_n)\n",
+    "\n",
+    "    # Calculate PSD, get a pointer returned\n",
+    "    out_ptr = fftw_psd_dll.psd2(img_ptr)\n",
+    "\n",
+    "    # Reshape array to image\n",
+    "    psd_image = np.reshape(out_ptr.contents,(imgsize,int(imgsize/2+1)))# Get input file\n",
+    "    input_img = binary.fits.data[0]\n",
+    "    #array = np.zeros((imgsize,imgsize))\n",
+    "    #array[int(imgsize/2)+1,int(imgsize/2)] = 1\n",
+    "    #array[int(imgsize/2)-1,int(imgsize/2)] = 1\n",
+    "    #array[int(imgsize/2),int(imgsize/2)] = 1\n",
+    "    \n",
+    "    # Return PSD Image\n",
+    "    return psd_image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Averaging ~19ms for each PSD calculation\n",
+    "# Unsurprisingly, this is 2x the time of the previous \n",
+    "#  PSD calculation\n",
+    "\n",
+    "psd_sum = np.zeros((imgsize,int(imgsize/2)+1))\n",
+    "image = binary.fits.data[0]\n",
+    "%timeit psd_sum = fftw_psd2(image)\n"
    ]
   }
  ],
