Added prints to show dtype/shape

--- a/dev/16-4-29 fftw_psd_test.ipynb
+++ b/dev/16-4-29 fftw_psd_test.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -23,11 +23,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filename: /home/niels/Documents/FITS/KP330.fits\n",
+      "No.    Name         Type      Cards   Dimensions   Format\n",
+      "0    PRIMARY     PrimaryHDU      62   (512, 512, 1000)   float32   \n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "# Import fits data\n",
     "binary = target()\n",
@@ -42,13 +53,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100 loops, best of 3: 9.59 ms per loop\n"
+     ]
+    }
+   ],
    "source": [
     "%timeit fftw_psd_img = fftw_psd(binary.fits.data[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(512, 257)\n",
+      "float32\n",
+      "float32\n"
+     ]
+    }
+   ],
+   "source": [
+    "fftw_psd_img = fftw_psd(binary.fits.data[0])\n",
+    "print(np.shape(fftw_psd_img))\n",
+    "print(fftw_psd_img.dtype)"
    ]
   }
  ],
